[package]
name = "crystals-dilithium"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantumblockchains.io/"
repository = "https://github.com/Quantum-Blockchains/dilithium"
keywords = ["cryptography", "quantum", "dilithium", "digital-signatures", "security"]
categories = ["cryptography", "post-quantum-cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sha2 = "0.10.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "dilithium_benchmarks"
harness = false
